# lambda-python-base

./: .gitignore  Dockerfile  compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  postStartCommand.sh
src/: api.py
src/aws_client/: artwork_table.py
src/biz/: artwork.py
tests/aws_client/: test_artwork_table.py
