[tool.poetry]
name = "lambda-python-base"
version = "0.1.0"
description = ""
authors = ["migitahiroaki <carp01hiro@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pynamodb = "^6.0.1"
typeguard = "^4.3.0"

[tool.poetry.group.dev.dependencies]
boto3 = "^1.34.149"
aws-lambda-powertools = "^2.42.0"
isort = "^5.13.2"
pytest = "^8.3.2"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
